--- a/2018/01-2/package.json
+++ b/2018/01-2/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@types/node": "^10.12.12",
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "utils": "file:../utils"
   }
 }
